# KBO

./: .gitignore  AGENT.md  AGENTS.md  README.md  RULES.md  compose.yml  pyrightconfig.json
apps/api/: .env.example  environment.yml  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260314_0001_vertical_slice.py  20260314_0002_game_series_fields.py  20260314_0003_boxscore_extra_fields.py  20260314_0004_league_contexts.py  20260314_0005_advanced_metric_inputs.py  20260314_0006_advanced_metric_baselines.py
apps/api/app/: main.py
apps/api/app/api/routes/: games.py  players.py  seasons.py  teams.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/ingest/: cli.py  http_client.py  scheduler.py
apps/api/app/ingest/orchestrators/: ingest_game.py  ingest_season.py
apps/api/app/models/: __init__.py  context.py  game.py  stats.py  sync.py  team.py
apps/api/app/schemas/: __init__.py  freshness.py  game_browse.py  player_detail.py  season_center.py  team_detail.py
apps/api/app/services/: derived_stats.py  freshness_service.py  game_browse_service.py  game_query_service.py  league_context_service.py  player_detail_service.py  season_center_query_service.py  team_detail_service.py
apps/api/kbo_record_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_common_parser.py  test_derived_stats.py  test_game_routes.py  test_health.py  test_ingest_cli.py  test_review_parser.py  test_scoreboard_parser.py  test_season_routes.py  test_team_game_routes.py
docs/: README.md
(+60 files in other folders)
