[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kbo-record-api"
version = "0.1.0"
description = "FastAPI backend for the KBO record service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.0,<9.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
