[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kbo-record-api"
version = "0.1.0"
description = "FastAPI backend for the KBO record service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.14,<2.0",
  "pydantic-settings>=2.6,<3.0",
  "beautifulsoup4>=4.12,<5.0",
  "lxml>=5.3,<6.0",
  "httpx>=0.28,<1.0",
  "psycopg[binary]>=3.2,<4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
